[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "repopulse"
version = "1.0.0"
description = "GitHub ecosystem automation — sync templates, health checks, bulk updates"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
